--- a/app/src/main/res/layout/row_entity.xml
+++ b/app/src/main/res/layout/row_entity.xml
@@ -35,6 +35,7 @@
             android:textSize="20sp"
             android:text="Fabricantes de sueños"
             android:textStyle="bold"
+            android:fontFamily="@font/comfortaa_bold"
             android:lineSpacingMultiplier="0.8"/>
 
         <TextView
