--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="80dp"
             android:adjustViewBounds="true"
-            android:src="@mipmap/ic_avatar" />
+            android:src="@mipmap/ic_drawer_user" />
 
         <RelativeLayout
             android:layout_width="match_parent"
