--- a/app/src/main/res/drawable/bg_progress_payment.xml
+++ b/app/src/main/res/drawable/bg_progress_payment.xml
@@ -10,7 +10,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/green_light" />
+            <solid android:color="@color/white_90" />
         </shape>
 
     </item>
