--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -125,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_horizontal"
-                    android:layout_marginBottom="5dp">
+                    android:layout_marginBottom="30dp">
 
                     <ImageView
                         android:id="@+id/btn_rrss_web"
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/purple"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="20dp">
 
                     <TextView
                         style="@style/TextBase.White"
@@ -179,11 +179,23 @@
                     android:gravity="center_horizontal"
                     android:visibility="gone"/>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_offers"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false" />
+                    android:layout_height="wrap_content">
+
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_offers"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:background="@drawable/shadow_header"/>
+
+                </RelativeLayout>
 
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
@@ -195,7 +207,8 @@
             android:background="@color/transblack_entities"
             android:gravity="center"
             android:padding="15dp"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:fontFamily="@font/comfortaa_bold"/>
 
     </RelativeLayout>
 </LinearLayout>
