--- a/app/src/main/res/layout/fragment_payment_step1.xml
+++ b/app/src/main/res/layout/fragment_payment_step1.xml
@@ -9,11 +9,10 @@
 
 
     <TextView
-        style="@style/TextBase.Purple"
+        style="@style/TextTitleComfortaa.Purple"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="15dp"
-        android:text="@string/select_recipient"
-        android:textSize="22sp" />
+        android:text="@string/select_recipient" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +56,7 @@
             android:id="@+id/recycler_recipients"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/tab_selected"
+            android:background="@color/white_90"
             android:padding="5dp"/>
 
         <ProgressBar
