--- a/app/src/main/res/layout/fragment_payment_step2.xml
+++ b/app/src/main/res/layout/fragment_payment_step2.xml
@@ -20,11 +20,10 @@
             android:orientation="vertical">
 
             <TextView
-                style="@style/TextBase.Purple"
+                style="@style/TextTitleComfortaa.Purple"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/select_amount"
-                android:textSize="22sp" />
+                android:text="@string/select_amount" />
 
             <LinearLayout
                 android:layout_width="match_parent"
