--- a/app/src/main/res/layout/fragment_payment_step3.xml
+++ b/app/src/main/res/layout/fragment_payment_step3.xml
@@ -21,10 +21,9 @@
             android:orientation="vertical">
 
             <TextView
-                style="@style/TextBase.Purple"
+                style="@style/TextTitleComfortaa.Purple"
                 android:layout_marginTop="5dp"
-                android:text="@string/check_payment_data"
-                android:textSize="22sp" />
+                android:text="@string/check_payment_data" />
 
             <LinearLayout
                 android:layout_width="match_parent"
