--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,10 +8,11 @@
     <dimen name="width_image_standard">300dp</dimen>
 
 
-    <dimen name="text_small">12sp</dimen>
+    <dimen name="text_small">11sp</dimen>
+    <dimen name="text_normal">13sp</dimen>
     <dimen name="text_medium">15sp</dimen>
-    <dimen name="text_large">18sp</dimen>
-    <dimen name="text_extra_large">22sp</dimen>
+    <dimen name="text_large">17sp</dimen>
+    <dimen name="text_extra_large">20sp</dimen>
 
     <dimen name="text_title_comfortaa">21sp</dimen>
 
