--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:textSize">@dimen/text_normal</item>
         <item name="android:lineSpacingExtra">5dp</item>
         <item name="android:fontFamily">@font/sinkinsans</item>
     </style>
@@ -31,7 +31,7 @@
 
     <style name="EditTextAuth" parent="TextBase">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/text_medium</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:background">@drawable/bg_frame_grey</item>
         <item name="android:padding">10dp</item>
@@ -39,7 +39,7 @@
 
     <style name="EditTextAuth.PinCode" >
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/text_large</item>
         <item name="android:background">@drawable/bg_frame_grey</item>
         <item name="android:padding">5dp</item>
         <item name="android:ems">4</item>
@@ -49,7 +49,7 @@
     </style>
 
     <style name="TextTransactionsHeader" parent="TextBase.White">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_normal</item>
     </style>
 
 </resources>
