--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -170,19 +170,20 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_no_offers"
-                    style="@style/TextBase"
-                    android:text="@string/no_offers_right_now"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:gravity="center_horizontal"
-                    android:visibility="gone"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <TextView
+                        android:id="@+id/tv_no_offers"
+                        style="@style/TextBase"
+                        android:text="@string/no_offers_right_now"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center_horizontal"
+                        android:visibility="gone"/>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_offers"
@@ -192,7 +193,7 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
+                        android:layout_height="15dp"
                         android:background="@drawable/shadow_header"/>
 
                 </RelativeLayout>
