--- a/app/src/main/res/layout/activity_get_boniatos.xml
+++ b/app/src/main/res/layout/activity_get_boniatos.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/btn_recharge"
                 style="@style/ButtonMes"
                 android:layout_marginTop="20dp"
-                android:text="@string/recharge" />
+                android:text="@string/purchase_verb" />
 
 
         </LinearLayout>
