--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -12,9 +12,7 @@
         android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:alpha="0.5"
-        android:src="@mipmap/img_mes_header"
-        android:tint="@android:color/white" />
+        android:src="@mipmap/img_mes_header" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_intro"
