--- a/app/src/main/res/layout/fragment_intro_item.xml
+++ b/app/src/main/res/layout/fragment_intro_item.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/tv_intro_title"
                 style="@style/TextBase"
                 android:text="Más personalización"
-                android:textSize="22sp"
+                android:textSize="@dimen/text_large"
                 android:textColor="@color/purple"
                 android:gravity="center_horizontal"/>
 
@@ -41,7 +41,7 @@
                 style="@style/TextBase"
                 android:layout_marginTop="30dp"
                 android:text="Si necesitáramos un diseño especial para estas pantallas tambien se puede personalizar completamente el contenido (menos los botones de navegación de abajo)"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_medium"
                 android:gravity="center_horizontal" />
 
 
