--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -31,9 +31,9 @@
             android:id="@+id/view_enter_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -44,12 +44,11 @@
                 <TextView
                     style="@style/TextBase"
                     android:text="@string/already_have_account"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="5dp"/>
 
                 <TextView
                     android:id="@+id/btn_login"
                     style="@style/ButtonMes"
-                    android:minWidth="0dp"
                     android:padding="10dp"
                     android:text="@string/enter" />
             </LinearLayout>
@@ -59,17 +58,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:layout_marginLeft="40dp">
+                android:layout_marginTop="20dp">
 
                 <TextView
                     style="@style/TextBase"
                     android:text="@string/dont_have_account"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="5dp"/>
 
                 <TextView
                     android:id="@+id/btn_singup"
                     style="@style/ButtonMes"
-                    android:minWidth="0dp"
                     android:padding="10dp"
                     android:text="@string/register" />
             </LinearLayout>
