--- a/app/src/main/res/layout/view_progress_mes.xml
+++ b/app/src/main/res/layout/view_progress_mes.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/img_logo_mes_letters"
-        android:layout_marginBottom="20dp"
-        android:tint="@color/white"/>
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
 
-    <net.mercadosocial.moneda.views.RotativeImageView style="@style/ProgressMES" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/img_logo_mes_letters"
+            android:tint="@color/white" />
 
-</LinearLayout>
+        <net.mercadosocial.moneda.views.RotativeImageView style="@style/ProgressMES" />
+    </LinearLayout>
+
+</RelativeLayout>
