--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,7 +9,7 @@
 
 
     <dimen name="text_small">11sp</dimen>
-    <dimen name="text_normal">13sp</dimen>
+    <dimen name="text_small_2">13sp</dimen>
     <dimen name="text_medium">15sp</dimen>
     <dimen name="text_large">17sp</dimen>
     <dimen name="text_extra_large">20sp</dimen>
