--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">@dimen/text_normal</item>
+        <item name="android:textSize">@dimen/text_small_2</item>
         <item name="android:lineSpacingExtra">5dp</item>
         <item name="android:fontFamily">@font/sinkinsans</item>
     </style>
@@ -39,17 +39,17 @@
 
     <style name="EditTextAuth.PinCode" >
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textSize">@dimen/text_large</item>
+        <item name="android:textSize">@dimen/text_small_2</item>
         <item name="android:background">@drawable/bg_frame_grey</item>
         <item name="android:padding">5dp</item>
-        <item name="android:ems">4</item>
+        <item name="android:ems">6</item>
         <item name="android:inputType">numberPassword</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:maxLength">4</item>
     </style>
 
     <style name="TextTransactionsHeader" parent="TextBase.White">
-        <item name="android:textSize">@dimen/text_normal</item>
+        <item name="android:textSize">@dimen/text_small_2</item>
     </style>
 
 </resources>
