--- a/app/src/main/res/layout/view_register_pin_code.xml
+++ b/app/src/main/res/layout/view_register_pin_code.xml
@@ -16,6 +16,7 @@
     <TextView
         style="@style/TextBase"
         android:textSize="12sp"
+        android:layout_marginTop="5dp"
         android:text="@string/pin_code_register_explanation"/>
 
     <LinearLayout
