--- a/app/src/main/res/layout/row_entity_offer.xml
+++ b/app/src/main/res/layout/row_entity_offer.xml
@@ -29,7 +29,7 @@
             android:ellipsize="end"
             android:textColor="@color/grey"
             android:maxLines="2"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_medium"
             android:textStyle="bold"
             android:text="Fabricantes de sueños"/>
 
@@ -42,7 +42,7 @@
             style="@style/TextBase"
             android:textColor="@color/grey"
             android:maxLines="2"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_small_2"
             android:text="Fabricantes de sueños"
             android:layout_marginTop="10dp"/>
 
