--- a/app/src/main/res/layout/view_register_entity.xml
+++ b/app/src/main/res/layout/view_register_entity.xml
@@ -43,7 +43,7 @@
         style="@style/TextBase"
         android:layout_marginTop="10dp"
         android:text="@string/social_currency"
-        android:textSize="20sp" />
+        android:textSize="@dimen/text_large" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -55,6 +55,7 @@
             android:text="@string/how_much_boniatos_accept_max"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:textSize="@dimen/text_small"
             android:layout_toLeftOf="@+id/edit_max_accept_percent" />
 
 
@@ -73,7 +74,7 @@
             style="@style/TextBase"
             android:layout_marginLeft="5dp"
             android:text="%"
-            android:textSize="26sp"
+            android:textSize="@dimen/text_extra_large"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
@@ -89,6 +90,7 @@
             android:text="@string/bonus_percent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:textSize="@dimen/text_small"
             android:layout_toLeftOf="@+id/edit_bonus_percent"/>
 
 
@@ -109,7 +111,7 @@
             android:text="%"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:textSize="26sp" />
+            android:textSize="@dimen/text_extra_large" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -123,6 +125,7 @@
             android:text="@string/bonus_percent_entities"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:textSize="@dimen/text_small"
             android:layout_toLeftOf="@+id/edit_bonus_percent_entities"/>
 
 
@@ -143,7 +146,7 @@
             android:text="%"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:textSize="26sp" />
+            android:textSize="@dimen/text_extra_large" />
     </RelativeLayout>
 
 
